fix jenkins build